2023.2/CIMATEC/Represetacao_digital_da_construcao/av1_edital_rdc.md
# Edital Avaliação 01

## Os alunos devem reproduzir, Utilizando uma ferramenta CAD 2D, o jogo de plantas de uma edificação fornecida pelo professor.

1. O jogo de plantas deve conter no mínimo:

    - Planta Baixa dos 2 pavimentos

    - 1 corte passando pela escada

    - uma fachada

    - uma planta de cobertura

2. Os desenhos, a serem enviados em formato PDF e DWG devem apresentar:

    - Espessuras e hierarquia de traços conforme as regras de desenho técnico

    - Textos com nomes dos cômodos e as áreas dos mesmos

    - dimensões e cotas de nível

    - Hachuras de piso indicando as áreas molhadas

    - indicação de corte e fachada nas plantas

    - blocos para mostrar os layouts dos ambientes

### O envio deve ser feito em arquivo compactado (ZIP, RAR, TAR.GZ ou 7Z) contendo:
    - Arquivos DWG com os desenhos.
    - Arquivos PDF com os desenhos.
    - Arquivo CTB utilizado.

#### Os prazos devem ser consultados no cronograma da disciplina.

----------------------------

----------------------------


#### Arquivos

[Planta Baixa térreo](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-pav_terreo.pdf)

[Planta Baixa pavimento superior](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-pav_sup.pdf)

[Corte AA](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-corteaa.pdf)

[Corte BB](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-cortebb.pdf)


[FACHADA SUL](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_sul.pdf)

[FACHADA LESTE](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_leste.pdf)

[FACHADA NORTE](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_norte.pdf)

[FACHADA OESTE](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_oeste.pdf)

[COBERTURA](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-cobertura.pdf)


-------------------------------

-----------------------------

#### Templates e arquivos auxiliares

[template](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/template_01.dwt)

[CTB](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/info_01.ctb)

[FORMATOS](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/FORMATOS.dwg)


---------------------------------

----------------------------------


[Guia de Layers](av1_guia_de_layers.md)


--------------------------------------

--------------------------------------