2024.2/CIMATEC/Represetacao_digital_da_construcao/av1_edital_rdc.md
# Atividade de Avaliação 01: Edital 

-----

<div style= "align: top;">

<span style="float: left;">
<img src="../../../figs_gerais/senai_logo.png" width="150">

</span>
<span style="float: right;"><br>
CENTRO UNIVERSITÁRIO SENAI CIMATEC <br>
CURSO DE ARQUITETURA E URBANISMO

</span>


</div>

<br><br><br><br><br><br>

<div>
    <span style="float: left;">Docente: Prof: Msc. Fernando Ferraz Ribeiro</span>
    <span style="float: right;">Semestre: 2024.2</span>
</div>

<br>

---



<h4 style="background:lightblue">

Objetivo da avaliação

</h4>

1. Exercitar o raciocínio geométrico e espacial;
2. Entender fundamentos dos programas CAD;
3. Aplicar os conhecimentos teóricos e práticos abordados na disciplina.





<h4 style="background:lightblue">
Orientações gerais

</h4>

A avaliação poderá ser desenvolvida individualmente ou em dupla.

Os alunos devem reproduzir, Utilizando uma ferramenta CAD 2D, o jogo de plantas de uma edificação fornecida pelo professor.

<h4 style="background:lightblue">
Itens da entrega

</h4>

1. O jogo de plantas deve conter no mínimo:

    - Planta Baixa dos 2 pavimentos

    - 2 cortes - um deles passando pela escada

    - Duas fachadas

    - uma planta de cobertura

2. Os desenhos, a serem enviados em formato PDF e DWG devem apresentar:

    - Espessuras e hierarquia de traços conforme as regras de desenho técnico

    - Textos com nomes dos cômodos e as áreas dos mesmos

    - dimensões e cotas de nível

    - Hachuras de piso indicando as áreas molhadas

    - indicação de corte e fachada nas plantas

    - blocos para mostrar os layouts dos ambientes


<h4 style="background:lightblue"> Formato da entrega e envio</h4>

O envio deve ser feito em arquivo compactado (ZIP, RAR, TAR.GZ ou 7Z) contendo:
    - Arquivo(s) .DWG com os desenhos.
    - Arquivo(s) .PDF com os desenhos.
    - Arquivo(s) .CTB utilizado(s).


 Os trabalhos devem ser enviados pelo Canvas da disciplina.

<h4 style="background:lightblue"> Data de entrega</h4>

Os prazos devem ser consultados no cronograma da disciplina.


<h4 style="background:lightblue">Observação :</h4>

Trabalhos copiados serão zerados

Não é permitido importar o PDF como arquivo vetorial

Outros conjuntos de plantas equivalentes podem ser apresentadas desde que aprovadas previamente pelo professor.

----------------------------

----------------------------


<h4 style="background:lightblue">Arquivos Base :</h4>

[Planta Baixa térreo]([2024.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/av1_pav_terreo.pdf](https://github.com/255ribeiro/Turmas_FFR/raw/master/2024.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/av1_pav_terreo.pdf))

<!-- [Planta Baixa pavimento superior](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-pav_sup.pdf)

[Corte AA](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-corteaa.pdf)

[Corte BB](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-cortebb.pdf)


[FACHADA SUL](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_sul.pdf)

[FACHADA LESTE](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_leste.pdf)

[FACHADA NORTE](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_norte.pdf)

[FACHADA OESTE](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-fch_oeste.pdf)

[COBERTURA](https://github.com/255ribeiro/Turmas_FFR/raw/master/2023.2/CIMATEC/Represetacao_digital_da_construcao/REP_DIG_CONS/PROJ_Exemplo_V2-cobertura.pdf)


---------------------------------

----------------------------------


[Guia de Layers](av1_guia_de_layers.md)


--------------------------------------

-------------------------------------- -->